# cc-permission-manager

./: .claude  .gitignore  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  README.md  README_CN.md  RELEASE_GUIDE.md  UPDATEPLAN.md  setup_claude_dir.py
0_Doc/: 0.4.4_发布与Windows虚拟机构建记录.md  Information.md  Windows_ARM64_开发环境配置.md  python-detection-feature.md  安装包配置指南.md  开发计划.md  技术栈.md
2_Scripts/: Quick_Backup.py  build_arm64.bat  build_x64.bat  mac_build.sh  mac_start_app.sh  refresh_path.bat  start_app.bat  start_app.sh  start_dev_win_arm64.bat  start_dev_x64.bat  test_without_python.bat  update_version.py  win_build_x64_portable.bat
2_Scripts/test/: hook-test-commands.txt  sound_player_gui.py  test-sounds.sh  test-translation-replacement.ts
src/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
src/public/templates/: permissions.json  settings.json  settings_mac.json  settings_windows.json
src/src/: App.tsx  index.css  main.tsx
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/icons/: icon.icns
src/src-tauri/src/: commands.rs  main.rs
src/src/lib/: config-generator.ts  config-paths.ts  constants.ts  global-hook-installer.ts  python-detector.ts  update-checker.ts
src/src/locales/: en.json  i18n.ts  zh.json
src/src/stores/: config-store.ts  index.ts  permission-store.ts  theme-store.ts  workspace-store.ts
src/src/types/: config.ts
test/: sound_player_gui_CN.py  test-classic-sounds.ps1  test-sounds.ps1  test_translation_replacement.py
(+26 files in other folders)
