[package]
name = "cc-permission-manager"
version = "0.4.3"
description = "A tool for managing Claude Code permission configurations"
authors = ["Tonyhzk"]
license = "MIT"
repository = "https://github.com/Tonyhzk/cc-permission-manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rodio = "0.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
